--- a/style.css
+++ b/style.css
@@ -104,21 +104,46 @@ h2, p {
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.5);
   transition: transform 0.3s ease;
   display: flex;
-  flex-direction: row-reverse; /* Изменено значение на row-reverse */
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .product-card-overlay .product-details {
-  flex: 1;
-  padding: 10px;
+  padding: 40px;
   text-align: left;
 }
 
+.product-card-overlay .product-details-text {
+/*  display: flex; /* Добавлена новая строка */*/
+  align-items: center; /* Добавлена новая строка */
+  margin-bottom: -50px;
+}
+
+.product-details-updatetime
+{
+    text-align: right;
+    padding-right: 40px;
+    margin-top: -20%;
+}
+
+
+.product-details-update
+{
+    text-align: left;
+    padding-left: 40px;
+/*    margin-top: -200px;*/
+}
+
+.product-details-description
+{
+    text-align: left;
+    padding-left: 40px;
+    margin-top: -15%;
+}
+
 .product-card-overlay .product-image {
-  flex: 1;
-  padding: 10px;
   text-align: right;
+  margin-left: 10px; /* Добавлена новая строка */
 }
 
 .product-card-overlay img {
@@ -126,7 +151,7 @@ h2, p {
   max-height: 200px;
   object-fit: contain;
   border-radius: 5px;
-  margin-bottom: 10px;
+  margin-bottom: -60px;
 }
 
 .product-card-overlay h2 {
@@ -139,6 +164,11 @@ h2, p {
   margin-bottom: 5px;
 }
 
+.product-card-overlay .button-group {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .product-card-overlay button {
   background-color: #ff9933;
   color: #fff;
@@ -148,11 +178,15 @@ h2, p {
   cursor: pointer;
   width: fit-content;
   margin-top: 10px;
+  margin-bottom: 25px;
+  margin-right: 40px;
 }
 
 .product-card-overlay button:hover {
   background-color: #ff6600;
 }
+
+
 
 
 
