--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ h2, p {
 {
     text-align: right;
     padding-right: 40px;
-    margin-top: -20%;
+    margin-top: -13%;
 }
 
 
@@ -131,14 +131,21 @@ h2, p {
 {
     text-align: left;
     padding-left: 40px;
-/*    margin-top: -200px;*/
+    margin-top: 3%;
+}
+
+.product-details-ps
+{
+    text-align: left;
+    padding-left: 40px;
+    margin-top: 5%;
 }
 
 .product-details-description
 {
     text-align: left;
     padding-left: 40px;
-    margin-top: -15%;
+    margin-top: -10%;
 }
 
 .product-card-overlay .product-image {
