--- a/style.css
+++ b/style.css
@@ -116,10 +116,10 @@ h2, p {
   margin-bottom: -50px;
 }
 
-.product-details-updatetime {
-  text-align: right;
-  padding-right: 40px;
-  margin-top: -13%;
+.product-details-description {
+  text-align: left;
+  padding-left: 40px;
+  margin-top: -10%;
 }
 
 .product-details-update {
@@ -128,16 +128,16 @@ h2, p {
   margin-top: 3%;
 }
 
+.product-details-updatetime {
+  text-align: right;
+  padding-right: 40px;
+  margin-top: -4%;
+}
+
 .product-details-ps {
   text-align: left;
   padding-left: 40px;
   margin-top: 5%;
-}
-
-.product-details-description {
-  text-align: left;
-  padding-left: 40px;
-  margin-top: -10%;
 }
 
 .product-card-overlay .product-image {
@@ -252,7 +252,7 @@ h2, p {
 
   .product-details-description, .product-details-update
   {
-    margin-left: -10%;
+    margin-left: -15%;
   }
 
   .product-details-updatetime
@@ -287,14 +287,9 @@ h2, p {
     margin-top: 80px;
   }
 
-  .product-details-description, .product-details-update
+.product-details-update
   {
     margin-left: -5%;
-  }
-
-  .product-details-updatetime
-  {
-    text-align: left;
   }
 
   .product-card-overlay .product-details, .product-details-updatetime, .product-details-ps {
